corrected about page overlapping projects on smaller screens

--- a/portfolio/src/components/about/index.css
+++ b/portfolio/src/components/about/index.css
@@ -52,7 +52,7 @@
     width: 100%;
     height: 100%;
     left: -8%;
-    top: -8%;
+    top: 8%;
     border: 4px solid #9a9c9e;
     border-radius: 5px;
     content: "";
@@ -62,12 +62,11 @@
 #about {
     display: flex;
     flex-direction: row;
-    width: 1100px;
-    height: 100%;
+    width: 100%;
+    height: 800px;
     /* padding: 0 10px 0 10px; */
+    justify-content: center;
     align-items: center;
-    margin-top: 10px;
-    margin-bottom: 100px;
 }
 
 #intro {
