--- a/portfolio/src/components/app/App.css
+++ b/portfolio/src/components/app/App.css
@@ -1,9 +1,6 @@
 .App {
   height: 100%;
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
 }
 
 .main {
@@ -11,7 +8,6 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: center;
   flex-wrap: wrap;
   background-color: #212529;
   color: #9a9c9e;
