--- a/portfolio/src/components/navigation/index.css
+++ b/portfolio/src/components/navigation/index.css
@@ -1,16 +1,15 @@
 .nav-div {
-    height: 50px;
-    background-color: #212529;
+    height: 75px;
+    width: 100%;
     color: #FFF;
     font-size: 16px;
     display: flex;
     justify-content: space-between;
-    align-content: center;
     padding: 0 10px;
+    margin-bottom: 30px;
 }
 
 .nav-brand {
-    height: 100%;
     display: flex;
     align-items: center;
 }
@@ -23,7 +22,7 @@
 }
 
 .nav-links li {
-    display: inline;
+    display: inline-block;
     margin-left: 15px;
 }
 
@@ -34,7 +33,6 @@
 .dropdown {
     height: 100%;
     display: none !important;
-    display: flex;
     align-items: center;
 }
 
