--- a/portfolio/src/components/projects/index.css
+++ b/portfolio/src/components/projects/index.css
@@ -6,7 +6,6 @@
 }
 
 .projects {
-    margin: 20px auto;
     width: 100%;
     display: flex;
     flex-direction: column;
